Add spectacle effects and automated tests

--- a/index.html
+++ b/index.html
@@ -38,6 +38,13 @@
         <div><strong>SFX</strong><span id="sfxState">ON</span></div>
       </div>
 
+      <div class="uber-meter">
+        <div class="uber-label">Uber Meter</div>
+        <div class="uber-bar">
+          <div id="uberFill"></div>
+        </div>
+      </div>
+
       <div class="legend">
         <h2>Ohjaimet</h2>
         <ul>
