Require win by two and document rule

--- a/index.html
+++ b/index.html
@@ -53,6 +53,7 @@
           <li><code>Shift</code>: P1 Slap Shot (cooldown)</li>
           <li><code>Enter</code>: P2 Slap Shot (cooldown)</li>
           <li>Mobiili: näytön alareunan napit</li>
+          <li>Voitto vaatii 2 pisteen eron, kun pistemäärä on saavutettu</li>
         </ul>
       </div>
     </section>
