--- a/index.html
+++ b/index.html
@@ -4,6 +4,12 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>UBERPONG: Pinball Court</title>
+  <link rel="preconnect" href="https://fonts.googleapis.com" />
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+  <link
+    rel="stylesheet"
+    href="https://fonts.googleapis.com/css2?family=Exo+2:wght@300;400;600;700&family=Orbitron:wght@400;600;700;800&display=swap"
+  />
   <link rel="stylesheet" href="styles/main.css" />
 </head>
 <body>
@@ -52,6 +58,7 @@
           <li><code>↑</code> / <code>↓</code>: P2 ylös/alas</li>
           <li><code>Shift</code>: P1 Slap Shot (cooldown)</li>
           <li><code>Enter</code>: P2 Slap Shot (cooldown)</li>
+          <li><code>B</code>: musiikki päälle/pois</li>
           <li>Mobiili: näytön alareunan napit</li>
           <li>Voitto vaatii 2 pisteen eron, kun pistemäärä on saavutettu</li>
         </ul>
@@ -59,7 +66,7 @@
     </section>
 
     <section class="game-card">
-      <canvas id="gameCanvas" width="960" height="540" aria-label="UBERPONG pelialue"></canvas>
+      <canvas id="gameCanvas" width="1120" height="630" aria-label="UBERPONG pelialue"></canvas>
       <div class="mobile-controls" id="mobileControls">
         <div class="mobile-col">
           <button data-hold="KeyW">P1 ▲</button>
