Add multi-song music config and UI

--- a/index.html
+++ b/index.html
@@ -44,6 +44,14 @@
         <div><strong>SFX</strong><span id="sfxState">ON</span></div>
       </div>
 
+      <div class="music-row">
+        <div class="music-track">
+          <strong>Biisi</strong>
+          <span id="songName">-</span>
+        </div>
+        <button id="nextTrackBtn" type="button">Next Track</button>
+      </div>
+
       <div class="uber-meter">
         <div class="uber-label">Uber Meter</div>
         <div class="uber-bar">
